create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1311,7 +1311,7 @@ body {
 .cid-reboewuRuw {
   background: #cccccc;
   padding-top: 0px;
-  padding-bottom: 120px;
+  padding-bottom: 60px;
 }
 .cid-reboewuRuw .image-block {
   margin: auto;
@@ -1728,6 +1728,14 @@ body {
 .cid-re61u6IqAO .nav-link:hover,
 .cid-re61u6IqAO .dropdown-item:hover {
   color: #767676 !important;
+}
+.cid-recdZwpBgZ {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recdZwpBgZ .media-container-row .mbr-text {
+  color: #767676;
 }
 .cid-re61u6IqAO .navbar {
   background: #cccccc;
@@ -2147,8 +2155,8 @@ body {
   color: #767676;
 }
 .cid-rebCqtqvtm {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 135px;
+  padding-bottom: 135px;
   background-color: #cccccc;
 }
 .cid-rebCqtqvtm .mbr-section-subtitle {
@@ -2395,6 +2403,14 @@ body {
   .cid-rebF8VWujs .video-block {
     width: 100% !important;
   }
+}
+.cid-recfjF7FQY {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfjF7FQY .media-container-row .mbr-text {
+  color: #767676;
 }
 .cid-re6Zu591BA .navbar {
   background: #cccccc;
@@ -2890,6 +2906,14 @@ body {
 .cid-re72q9QBfg .card-title {
   color: #767676;
 }
+.cid-recfmOnKOU {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfmOnKOU .media-container-row .mbr-text {
+  color: #767676;
+}
 .cid-re6Zu591BA .navbar {
   background: #cccccc;
   transition: none;
@@ -3338,6 +3362,14 @@ body {
   }
 }
 .cid-rebs1963vT .card-title {
+  color: #767676;
+}
+.cid-recfOGhLZ9 {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfOGhLZ9 .media-container-row .mbr-text {
   color: #767676;
 }
 .cid-re6Zu591BA .navbar {
@@ -3872,6 +3904,14 @@ body {
 }
 .cid-re73R1Eam6 .mbr-section-title {
   text-align: left;
+  color: #767676;
+}
+.cid-recfDaAVxH {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfDaAVxH .media-container-row .mbr-text {
   color: #767676;
 }
 .cid-re6Zu591BA .navbar {
@@ -4859,6 +4899,14 @@ body {
 .cid-rebqLdxuCu .content-slider-wrap {
   width: 73%;
 }
+.cid-recfHqMayn {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfHqMayn .media-container-row .mbr-text {
+  color: #767676;
+}
 .cid-re7mEmiVV3 .navbar {
   background: #cccccc;
   transition: none;
@@ -5322,6 +5370,14 @@ body {
 }
 .cid-re7p3r1azD .mbr-text,
 .cid-re7p3r1azD .mbr-section-btn {
+  color: #767676;
+}
+.cid-recfq0d966 {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfq0d966 .media-container-row .mbr-text {
   color: #767676;
 }
 .cid-re8IqTwfqt .navbar {
@@ -5834,6 +5890,14 @@ body {
     width: 100% !important;
   }
 }
+.cid-recfvtWwzg {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfvtWwzg .media-container-row .mbr-text {
+  color: #767676;
+}
 .cid-re8PygXfBK .navbar {
   background: #cccccc;
   transition: none;
@@ -6301,6 +6365,14 @@ body {
     -webkit-flex-basis: initial !important;
   }
 }
+.cid-recfy1BjrK {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfy1BjrK .media-container-row .mbr-text {
+  color: #767676;
+}
 .cid-re8SjNKHCv .navbar {
   background: #cccccc;
   transition: none;
@@ -6731,6 +6803,14 @@ body {
 }
 .cid-re8SRxQMj0 .mbr-text,
 .cid-re8SRxQMj0 .mbr-section-btn {
+  color: #767676;
+}
+.cid-recfAzoUCX {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfAzoUCX .media-container-row .mbr-text {
   color: #767676;
 }
 .cid-re8TvZ3xkt .navbar {
@@ -7209,6 +7289,14 @@ body {
   opacity: 0.6;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
+}
+.cid-recfsskGGl {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfsskGGl .media-container-row .mbr-text {
+  color: #767676;
 }
 .cid-rebrObR0wh .navbar {
   background: #cccccc;
@@ -8191,4 +8279,12 @@ body {
 }
 .cid-rebrOfBus3 .content-slider-wrap {
   width: 73%;
+}
+.cid-recfLoEh3c {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-recfLoEh3c .media-container-row .mbr-text {
+  color: #767676;
 }
