--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3298,46 +3298,37 @@ body {
 .cid-rebszJFGtY .mbr-section-subtitle {
   color: #767676;
 }
-.cid-rebs1963vT {
+.cid-rehEwgQ9yz {
+  background: #cccccc;
   padding-top: 0px;
-  padding-bottom: 135px;
-  background-color: #cccccc;
+  padding-bottom: 15px;
 }
-.cid-rebs1963vT .card-img {
-  background-color: #fff;
+.cid-rehEwgQ9yz .image-block {
+  margin: auto;
 }
-.cid-rebs1963vT .card-box {
-  padding: 2rem;
+.cid-rehEwgQ9yz figcaption {
+  position: relative;
 }
-.cid-rebs1963vT h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
+.cid-rehEwgQ9yz figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
-.cid-rebs1963vT p {
-  text-align: left;
-}
-.cid-rebs1963vT .mbr-text {
-  color: #767676;
-}
-.cid-rebs1963vT .card-wrapper {
-  height: 100%;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-rebs1963vT .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-@media (min-width: 992px) {
-  .cid-rebs1963vT .my-col {
-    flex: 0 0 20%;
-    max-width: 20%;
-    padding: 15px;
-    -webkit-flex: 0 0 20%;
+@media (max-width: 768px) {
+  .cid-rehEwgQ9yz .image-block {
+    width: 100% !important;
   }
 }
-.cid-rebs1963vT .card-title {
+.cid-rehEB8F5rq {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background: linear-gradient(45deg, #cccccc, #cccccc);
+}
+.cid-rehEB8F5rq H1 {
+  color: #767676;
+}
+.cid-rehEB8F5rq .mbr-text,
+.cid-rehEB8F5rq .mbr-section-btn {
   color: #767676;
 }
 .cid-recHxzE9p3 {
@@ -4339,68 +4330,6 @@ body {
 }
 .cid-rebqzaYkJC .mbr-section-subtitle {
   color: #767676;
-}
-.cid-rebqJNLBGP {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #cccccc;
-}
-.cid-rebqJNLBGP .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-rebqJNLBGP .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rebqJNLBGP .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rebqJNLBGP .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-rebqJNLBGP .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-rebqJNLBGP .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-rebqJNLBGP .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-rebqJNLBGP .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-rebqJNLBGP .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
 }
 .cid-rebqLTMMsf .modal-body .close {
   background: #1b1b1b;
