--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4569,283 +4569,6 @@ body {
 .cid-rebqLTMMsf .mbr-overlay ~ .container-slide {
   z-index: auto;
 }
-.cid-rebqLdxuCu {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #cccccc;
-}
-.cid-rebqLdxuCu .content-slider {
-  display: -webkit-flex;
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-.cid-rebqLdxuCu .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-rebqLdxuCu .modal-body .close span {
-  font-style: normal;
-}
-.cid-rebqLdxuCu .carousel-inner > .active,
-.cid-rebqLdxuCu .carousel-inner > .next,
-.cid-rebqLdxuCu .carousel-inner > .prev {
-  display: -webkit-flex;
-}
-.cid-rebqLdxuCu .carousel-control .icon-next,
-.cid-rebqLdxuCu .carousel-control .icon-prev {
-  margin-top: -18px;
-  font-size: 40px;
-  line-height: 27px;
-}
-.cid-rebqLdxuCu .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-rebqLdxuCu .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-rebqLdxuCu .content-slider-wrap {
-    width: 100%!important;
-  }
-}
-.cid-rebqLdxuCu .boxed-slider {
-  position: relative;
-  padding: 93px 0;
-}
-.cid-rebqLdxuCu .boxed-slider > div {
-  position: relative;
-}
-.cid-rebqLdxuCu .container img {
-  width: 100%;
-}
-.cid-rebqLdxuCu .container img + .row {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: 2;
-}
-.cid-rebqLdxuCu .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-rebqLdxuCu .mbr-table-cell {
-  padding: 0;
-}
-.cid-rebqLdxuCu .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-rebqLdxuCu .carousel-caption {
-  top: 50%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  display: -webkit-flex;
-  align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-align-items: center;
-}
-.cid-rebqLdxuCu .mbr-overlay {
-  z-index: 1;
-}
-.cid-rebqLdxuCu .container-slide.container {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-rebqLdxuCu .carousel-item {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -o-transition: -o-transform 0.6s ease-in-out;
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-@media (max-width: 576px) {
-  .cid-rebqLdxuCu .carousel-item .container {
-    width: 100%;
-  }
-}
-.cid-rebqLdxuCu .carousel-item-next.carousel-item-left,
-.cid-rebqLdxuCu .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-.cid-rebqLdxuCu .active.carousel-item-right,
-.cid-rebqLdxuCu .carousel-item-next {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-.cid-rebqLdxuCu .active.carousel-item-left,
-.cid-rebqLdxuCu .carousel-item-prev {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-.cid-rebqLdxuCu .mbr-slider .carousel-control {
-  top: 50%;
-  width: 50px;
-  height: 50px;
-  margin-top: -1.5rem;
-  font-size: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all .3s;
-}
-.cid-rebqLdxuCu .mbr-slider .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rebqLdxuCu .mbr-slider .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rebqLdxuCu .mbr-slider .carousel-control .mbr-iconfont {
-  font-size: 1.5rem;
-}
-@media (max-width: 767px) {
-  .cid-rebqLdxuCu .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-rebqLdxuCu .mbr-slider .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-rebqLdxuCu .mbr-slider .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: .5;
-  transition: all .3s;
-}
-.cid-rebqLdxuCu .mbr-slider .carousel-indicators li.active,
-.cid-rebqLdxuCu .mbr-slider .carousel-indicators li:hover {
-  opacity: .9;
-}
-.cid-rebqLdxuCu .mbr-slider .carousel-indicators li::after,
-.cid-rebqLdxuCu .mbr-slider .carousel-indicators li::before {
-  content: none;
-}
-.cid-rebqLdxuCu .mbr-slider .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 576px) {
-  .cid-rebqLdxuCu .mbr-slider .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-rebqLdxuCu .mbr-slider > .container img {
-  width: 100%;
-}
-.cid-rebqLdxuCu .mbr-slider > .container img + .row {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-rebqLdxuCu .mbr-slider > .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-@media (max-width: 576px) {
-  .cid-rebqLdxuCu .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-rebqLdxuCu .mbr-slider .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-rebqLdxuCu .mbr-slider .mbr-table-cell {
-  padding: 0;
-}
-.cid-rebqLdxuCu .carousel-item .container.container-slide {
-  position: initial;
-  width: auto;
-  min-height: 0;
-}
-.cid-rebqLdxuCu .full-screen .slider-fullscreen-image {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.cid-rebqLdxuCu .full-screen .slider-fullscreen-image.active {
-  display: -o-flex;
-}
-.cid-rebqLdxuCu .full-screen .container {
-  width: auto;
-  padding-right: 0;
-  padding-left: 0;
-}
-.cid-rebqLdxuCu .full-screen .carousel-item .container.container-slide {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-rebqLdxuCu .full-screen .carousel-item .container.container-slide img {
-  display: none;
-}
-.cid-rebqLdxuCu .mbr-background-video-preview {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.cid-rebqLdxuCu .mbr-overlay ~ .container-slide {
-  z-index: auto;
-}
-.cid-rebqLdxuCu .mbr-slider.slide .container {
-  overflow: hidden;
-  padding: 0;
-}
-.cid-rebqLdxuCu .carousel-inner {
-  height: 100%;
-}
-.cid-rebqLdxuCu .slider-fullscreen-image {
-  height: 100%;
-  background: transparent !important;
-}
-.cid-rebqLdxuCu .image_wrapper {
-  height: 400px;
-  width: 100%;
-  position: relative;
-  display: inline-block;
-}
-.cid-rebqLdxuCu .image_wrapper img {
-  width: auto !important;
-  height: 100%;
-}
-.cid-rebqLdxuCu .carousel-item .container-slide {
-  text-align: center;
-}
-.cid-rebqLdxuCu .content-slider-wrap {
-  width: 73%;
-}
 .cid-recfHqMayn {
   padding-top: 60px;
   padding-bottom: 15px;
@@ -7743,5 +7466,454 @@ body {
   background-color: #cccccc;
 }
 .cid-rehWcH0zQj .media-container-row .mbr-text {
+  color: #767676;
+}
+.cid-renfE47121 .navbar {
+  background: #cccccc;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-renfE47121 .navbar-dropdown.bg-color.transparent.opened {
+  background: #cccccc;
+}
+.cid-renfE47121 a {
+  font-style: normal;
+}
+.cid-renfE47121 .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-renfE47121 .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-renfE47121 .nav-item:focus,
+.cid-renfE47121 .nav-link:focus {
+  outline: none;
+}
+.cid-renfE47121 .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-renfE47121 .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-renfE47121 .menu-logo {
+  margin-right: auto;
+}
+.cid-renfE47121 .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-renfE47121 .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-renfE47121 .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-renfE47121 .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-renfE47121 .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-renfE47121 .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-renfE47121 .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-renfE47121 .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-renfE47121 .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-renfE47121 .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-renfE47121 .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-renfE47121 .dropdown .dropdown-menu {
+  background: #cccccc;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-renfE47121 .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-renfE47121 .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-renfE47121 .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-renfE47121 .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-renfE47121 .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-renfE47121 .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-renfE47121 .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-renfE47121 .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-renfE47121 .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-renfE47121 .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-renfE47121 .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-renfE47121 button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-renfE47121 button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-renfE47121 button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #767676;
+}
+.cid-renfE47121 button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-renfE47121 button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-renfE47121 button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-renfE47121 button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-renfE47121 nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-renfE47121 nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-renfE47121 nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-renfE47121 nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-renfE47121 .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-renfE47121 .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-renfE47121 .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-renfE47121 .collapsed .navbar-collapse.collapsing,
+.cid-renfE47121 .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-renfE47121 .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-renfE47121 .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-renfE47121 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-renfE47121 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-renfE47121 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-renfE47121 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-renfE47121 .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-renfE47121 .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-renfE47121 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-renfE47121 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-renfE47121 .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-renfE47121 .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-renfE47121 .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-renfE47121 .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-renfE47121 .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-renfE47121 .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-renfE47121 .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-renfE47121.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-renfE47121 img {
+    height: 3.8rem !important;
+  }
+  .cid-renfE47121 .btn {
+    display: -webkit-flex;
+  }
+  .cid-renfE47121 button.navbar-toggler {
+    display: block;
+  }
+  .cid-renfE47121 .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-renfE47121 .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-renfE47121 .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-renfE47121 .navbar-collapse.collapsing,
+  .cid-renfE47121 .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-renfE47121 .navbar-collapse.collapsing .navbar-nav,
+  .cid-renfE47121 .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-renfE47121 .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-renfE47121 .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-renfE47121 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-renfE47121 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-renfE47121 .navbar-collapse.collapsing .navbar-buttons,
+  .cid-renfE47121 .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-renfE47121 .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-renfE47121 .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-renfE47121 .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-renfE47121 .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-renfE47121 .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-renfE47121 .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-renfE47121 .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-renfE47121 .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-renfE47121 .nav-link:hover,
+.cid-renfE47121 .dropdown-item:hover {
+  color: #767676 !important;
+}
+.cid-renfE5C75m {
+  padding-top: 120px;
+  padding-bottom: 0px;
+  background-color: #cccccc;
+}
+.cid-renfE5C75m .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rengzOmmfR {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #cccccc;
+}
+.cid-rengzOmmfR h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rengzOmmfR p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rengzOmmfR .card-box {
+  padding-top: 2rem;
+}
+.cid-rengzOmmfR .card-wrapper {
+  height: 100%;
+}
+.cid-rengzOmmfR .card-title {
+  color: #767676;
+}
+.cid-renhcjj0hu {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #cccccc;
+}
+.cid-renhcXHgrt {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #cccccc;
+}
+.cid-renfEbFtFM {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-renfEbFtFM .media-container-row .mbr-text {
   color: #767676;
 }
