create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1296,62 +1296,13 @@ body {
     flex: auto!important;
   }
 }
-.cid-rebodE9X44 {
-  padding-top: 105px;
-  padding-bottom: 0px;
-  background: linear-gradient(45deg, #cccccc, #cccccc);
-}
-.cid-rebodE9X44 H1 {
-  color: #ffffff;
-}
-.cid-rebodE9X44 .mbr-text,
-.cid-rebodE9X44 .mbr-section-btn {
-  color: #767676;
-}
-.cid-reKfrKZmd0 {
-  background: #cccccc;
+.cid-reM6VLIEsy {
   padding-top: 0px;
-  padding-bottom: 60px;
-}
-.cid-reKfrKZmd0 .image-block {
-  margin: auto;
-}
-.cid-reKfrKZmd0 figcaption {
-  position: relative;
-}
-.cid-reKfrKZmd0 figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-reKfrKZmd0 .image-block {
-    width: 100% !important;
-  }
+  padding-bottom: 105px;
+  background-color: #cccccc;
 }
 .cid-reKgrBVhtZ {
   background-image: url("../../../assets/images/img-4888-2000x1321.jpg");
-}
-.cid-reboewuRuw {
-  background: #cccccc;
-  padding-top: 0px;
-  padding-bottom: 60px;
-}
-.cid-reboewuRuw .image-block {
-  margin: auto;
-}
-.cid-reboewuRuw figcaption {
-  position: relative;
-}
-.cid-reboewuRuw figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-reboewuRuw .image-block {
-    width: 100% !important;
-  }
 }
 .cid-recFG6032o {
   padding-top: 120px;
