create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3843,6 +3843,74 @@ body {
   text-align: left;
   color: #767676;
 }
+.cid-reMO9vVMP7 {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background: linear-gradient(45deg, #cccccc, #cccccc);
+}
+@media (min-width: 992px) {
+  .cid-reMO9vVMP7 .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-reMO9vVMP7 .mbr-figure {
+    padding-top: 3rem;
+  }
+}
+.cid-reMO9vVMP7 .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-reMO9vVMP7 .media-container-row .mbr-figure {
+    padding-left: 0;
+    padding-right: 4rem;
+  }
+}
+.cid-reMO9vVMP7 .mbr-text,
+.cid-reMO9vVMP7 .mbr-section-btn {
+  text-align: left;
+  color: #767676;
+}
+.cid-reMO9vVMP7 .mbr-section-title {
+  text-align: left;
+  color: #767676;
+}
+.cid-reMO8W3mDy {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background: linear-gradient(45deg, #cccccc, #cccccc);
+}
+@media (min-width: 992px) {
+  .cid-reMO8W3mDy .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-reMO8W3mDy .mbr-figure {
+    padding-top: 3rem;
+  }
+}
+.cid-reMO8W3mDy .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-reMO8W3mDy .media-container-row .mbr-figure {
+    padding-left: 0;
+    padding-right: 4rem;
+  }
+}
+.cid-reMO8W3mDy .mbr-text,
+.cid-reMO8W3mDy .mbr-section-btn {
+  text-align: left;
+  color: #767676;
+}
+.cid-reMO8W3mDy .mbr-section-title {
+  text-align: left;
+  color: #767676;
+}
 .cid-recMsRkP8Z {
   padding-top: 30px;
   padding-bottom: 15px;
